Updated cover and resume

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="Abhinav Yadav | Data Analyst Portfolio" />
     <meta property="og:description" content="Data Analyst and Data Science enthusiast specializing in Python, SQL, and Power BI" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://drive.google.com/file/d/1CtoodEpDIIO8gQtRittpxfQ7NrS1tX8z/view?usp=sharing" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Abhinav Yadav | Data Analyst Portfolio" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://drive.google.com/file/d/1CtoodEpDIIO8gQtRittpxfQ7NrS1tX8z/view?usp=sharing" />
   </head>
 
   <body>
